# EGI

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  bandit.yaml  pyproject.toml
.github/workflows/: android-mesh-e2e.yml  android-pwa-smoke.yml  android-release.yml  android.yml  security.yml  tests.yml
assets/: banner.html
deploy/: docker-compose.staging.yml  prometheus-alerts.yml
docs/: DEPLOYMENT.md  OPERATIONS.md  PERFORMANCE.md  POSTGRES.md  PUSH_SETUP.md  README.en.md  README.es.md  README.pt.md  SECURITY_CHECKLIST.md  TESTING.md  roadmap.md
docs/ux-audit/: PREFLIGHT_CHECKLIST.md  USER_FEEDBACK_TEMPLATE.md  findings-001.md  findings-002.md
egi_cli/: __init__.py  cli.py  paths.py
egi_cli/commands/: __init__.py  backend.py  backup.py  build.py  deploy_staging.py  device.py  export_pfif.py  federation.py  frontend.py  generate_synthetic.py  import_pfif.py  migrate.py  moderation.py  ocr_review.py  quality.py  reports.py  retention.py  rotate_secrets.py  seed.py  shelters.py  unseed.py  users.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/public/: sw.js
frontend/scripts/: check-offline-assets.mjs  (+3 more)
server/: .env.example  README.md  ai.py  api_response.py  auth.py  backup.py  db.py  ids.py  jsonutil.py  logging_config.py  main.py  metrics.py  migrate.py  migrate_pg.py  models.py  normalize.py  ocr.py  pfif.py  ratelimit.py  requirements-dev.txt  requirements.txt  security.py  timeutil.py  uploads.py  validators.py  version.py
(+375 files in other folders)
